[package]
name = "loom"
version = "0.1.0"
edition = "2024"

[dependencies]
midir = "0.9"
egui = "0.23"
eframe = "0.23"
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"